# Quant

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  PROMPTS.md  README.md  SKILL.md  pyproject.toml  vercel.json
.github/workflows/: agents-cycle.yml  backfill.yml  backtest-m4.yml  backtest.yml  ci.yml  daily-pipeline.yml  expire-pending-signups.yml  gbm-retrain.yml  health-check.yml  migrate.yml  news-voter-readiness.yml  paper-monthly-review.yml  paper-report.yml  weekly-score-diagnostic.yml
agents/: __init__.py  grading.py
agents/backtest/: __init__.py  evaluate.py  replay_m4.py
agents/characters/: __init__.py  _base.py  _data.py  dow.py  graham.py  keynes.py  shiller.py  soros.py  taleb.py  turing.py
agents/cycle/: __init__.py  _change_detect.py  _favorites.py  run_m2_cycle.py  run_m3_cycle.py  run_m4_cycle.py
agents/db/: __init__.py  migrations_check.py  models.py  repository.py
agents/llm/: __init__.py  client.py  sanitize.py
agents/observability/: __init__.py  cost.py
agents/weights/: __init__.py  adjustments.py  constants.py  normalizer.py  validator.py
apps/api/: __init__.py  index.py  requirements.txt
apps/web/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
cognition/: __init__.py  commentary.py  embedder.py  mapper.py  market_brief.py  scorer.py  scorer_cli.py  sentiment.py  sentiment_cli.py
cognition/__schemas__/: __init__.py  scoring.py  sentiment.py
cognition/rag/: __init__.py  embedder.py  loader.py  retriever.py
cognition/utils/: __init__.py  anthropic_tool.py  cache.py  cost_tracker.py
collectors/: __init__.py  _base.py  dart.py  dart_events.py  finnhub.py  kr_news.py  kr_short.py  kr_trade.py  krx.py
collectors/__schemas__/: __init__.py  global_.py  korea.py
collectors/utils/: __init__.py  business_days.py
db/: __init__.py  storage_client.py  supabase_client.py
docs/quantsignal-design-docs/: CURRENT-STATE.md  M1-WORK-PLAN.md  M2-WORK-PLAN.md  M3-WORK-PLAN.md  M4-WORK-PLAN.md  M5-WORK-PLAN.md  README.md  REMAINING-WORK.md  character-dow.md  character-graham.md  character-keynes.md  character-shiller.md  character-simons.md  character-soros.md  character-taleb.md  character-turing.md  quant-signal-refactor-plan.md  system-call-flow.md  system-character-relationships.md  system-data-flow.md  system-implementation-roadmap.md  system-weight-settings.md
executor/: __init__.py  broker_interface.py  kis_broker.py  kiwoom_broker.py  paper_broker.py  paper_trader_bot.py  policy_learner.py  position_sizing.py  safety.py
executor/__schemas__/: __init__.py  order.py
notifier/: __init__.py  bot_runner.py  dispatcher.py  kakao.py  markdown.py  telegram.py  telegram_handlers.py
notifier/__schemas__/: __init__.py  messages.py
orchestrator/: __init__.py  health_check.py  pipeline.py
refinery/: __init__.py  _base.py  global_.py  korea.py  orchestrate.py
refinery/utils/: __init__.py  upsert.py
scripts/: backfill_commentary.py  backfill_dart_corpcodes.py  backfill_dart_financials.py  backfill_indices.py  backfill_investor_trend.py  backfill_kr_fundamentals.py  backfill_kr_market.py  backfill_kr_news.py  backfill_macro_factors.py  backfill_market_brief.py  backfill_score_predictions.py  backfill_sector_etfs.py  backfill_sentiment.py  compute_macro_betas.py  compute_overnight_betas.py  compute_sector_betas.py  debug_ai_scores.py  debug_global_market.py  debug_per_factor.py  debug_scorer_inputs.py  diagnose_voter_flatness.py  expire_pending_signups.py  news_voter_readiness.py  rerun_scoring.py  seed_krx_universe.py  setup_telegram_webhook.py
signal/: __init__.py
signals/: __init__.py  backtest.py  backtest_status.py  diagnose_score_price.py  features.py  gbm.py  gbm_cli.py  kr_fear_greed.py  kr_trade.py  preview_report.py  price_forecast.py  report.py  score_regressor.py
signals/__schemas__/: __init__.py  backtest.py  prediction.py  report.py
supabase/: config.toml
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/migrations/: 00000000000001_extensions.sql  00000000000002_core_tables.sql  00000000000003_executor_tables.sql  00000000000004_user_tables.sql  00000000000005_rls_policies.sql  00000000000006_rpc_functions.sql  00000000000007_triggers.sql  00000000000008_seed_weight_config.sql  00000000000009_foreign_keys.sql  00000000000010_invite_role_promotion.sql  00000000000011_link_telegram_conflict.sql  00000000000012_kr_fundamentals.sql  00000000000013_kr_dart_financials.sql  00000000000014_sector_betas_ai_commentary.sql  00000000000015_score_predictions.sql  00000000000016_macro_betas.sql  00000000000017_market_briefs.sql  00000000000018_agent_outputs.sql  00000000000019_signals_and_briefings.sql  00000000000020_weights_v2.sql  00000000000021_agent_knowledge.sql  00000000000022_agent_admin_and_views.sql  00000000000023_stocks_tier.sql  00000000000024_user_favorites.sql  00000000000025_kr_fear_greed.sql  00000000000026_user_approval.sql  00000000000027_simple_signup.sql  00000000000028_model_diagnostics.sql  00000000000029_overnight_betas.sql  00000000000029_rls_admin_recursion_fix.sql  00000000000030_phase_a_signal_accuracy_views.sql  00000000000031_kr_trade_stats.sql  00000000000032_rls_admin_recursion_fix.sql  00000000000033_price_forecasts.sql  00000000000034_paper_bot.sql  00000000000035_paper_bot_orders.sql  00000000000036_paper_policy.sql  00000000000037_dart_disclosures.sql  00000000000038_kr_short_selling.sql  00000000000039_paper_policy_hold_mult.sql  (+1 more)
supabase/seed/: 01_stocks.sql  02_us_kr_mapping.sql
tests/: conftest.py  test_admin_api.py  test_backtest.py  test_collectors_finnhub.py  test_collectors_krx.py  test_executor.py  test_gbm.py  test_health_check.py  test_mapper.py  test_notifier.py  test_pipeline.py  test_rag.py  test_refinery.py  test_report.py  test_scorer.py  test_sentiment.py
tests/agents/: test_grading.py
tests/cognition/: test_scorer_kr_fg.py
tests/collectors/: test_dart_events.py  test_kr_news_parse.py
tests/executor/: test_policy_learner.py  (+1 more)
(+209 files in other folders)
