[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-signal"
version = "0.1.0"
description = "AI investment signal advisor — global precursors → KR watchlist alerts"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }

# Full dependency set — installed on the GitHub Actions runner (orchestrator,
# collectors, refinery, cognition, signal). Vercel uses the trimmed
# apps/api/requirements.txt instead (SKILL.md §11-2 keeps build < 250 MB).
dependencies = [
    # Supabase / Postgres
    "supabase>=2.7,<3",
    "psycopg[binary]>=3.2,<4",

    # Cache
    "redis>=5,<6",

    # AI
    "anthropic>=0.34,<1",
    "openai>=1.40,<2",

    # Data sources (heavy — never importable from apps/api)
    "pykrx>=1.0.45",
    "finnhub-python>=2.4",
    "edgartools>=2.0",
    "pandas-market-calendars>=4.4",  # KRX/NYSE/NASDAQ business-day calendars

    # ML
    "scikit-learn>=1.5,<2",
    "numpy>=1.26,<3",
    "pandas>=2.2,<3",

    # Visualization (backtest PNG/HTML)
    "matplotlib>=3.9",
    "plotly>=5.22",

    # Pipeline / IO
    "apscheduler>=3.10",
    "rapidfuzz>=3.9",
    "tenacity>=9.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.9,<3",
    "fastapi>=0.115",        # apps/api shares model definitions
    "python-telegram-bot[ext]>=21.6",
    "tzdata>=2024.1",        # required on Windows for ZoneInfo("Asia/Seoul")
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = [
    "collectors*",
    "refinery*",
    "cognition*",
    "signals*",
    "executor*",
    "orchestrator*",
    "notifier*",
    "db*",
]
exclude = ["tests*", "apps*", "supabase*", "logs*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "N", "RUF"]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # FastAPI Depends() default
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
"supabase/*" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: hits real Supabase / external APIs",
]
